MP2Web/ClientApp/src/app/video-player/components/video-player/video-player.component.css
.video-placeholder-container {
  position: relative;
  width: 100%;
  height: auto;
}

  .video-placeholder-container .placeholder {
    width: 100%;
    height: auto;
    min-height: 100px;
  }

  .video-placeholder-container .play-button {
    position: absolute;
    width: 100px;
    height: 100px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    line-height: 1; /* needed if using Bootstrap */
    text-align: center;
    color: #eaeaea;
    background-color: rgba(255,255,255,.4);
    border-radius: 50px;
    transition: all .2s ease;
    font-weight: 900;
    font-size: 60px;
    /* positioning tweaks */
    padding-top: 20px;
    padding-left: 10px;
  }

    .video-placeholder-container .play-button:hover,
    .video-placeholder-container .play-button:focus {
      color: #000;
      background-color: rgba(255,255,255,.8);
      cursor: pointer;
    }

  .video-placeholder-container .loading-spinner {
    position: absolute;
    width: 100px;
    height: 100px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    line-height: 1; /* needed if using Bootstrap */
    text-align: center;
    background-color: rgba(255,255,255,.8);
    border-radius: 50px;
    font-weight: 900;
    /* positioning tweaks */
    padding-top: 35px;
  }

.video-player-container {
  position: relative;
  cursor: none;
}

  .video-player-container .video-player {
    width: 100%;
    background-color: black;
  }

  .video-player-container:fullscreen .video-player,
  .video-player-container:webkit-full-screen .video-player,
  .video-player-container:moz-full-screen .video-player,
  .video-player-container:ms-fullscreen .video-player {
    height: 100%;
  }

  .video-player-container .video-controls {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 12px 4px;
    background-color: rgba(0, 0, 0, 0.6);
    opacity: 0;
    -webkit-transition: all 0.4s ease;
    -moz-transition: all 0.4s ease;
    -ms-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
    transition: all 0.4s ease;
  }

.video-player-container.show {
  cursor: default;
}

  .video-player-container.show .video-controls {
    opacity: 1;
  }

